# smartmail

./: .env.example  .gitignore  README.md  email_indexer.py  pyproject.toml  web_app.py
static/css/: style.css
static/js/: app.js
templates/: index.html
