[project]
name = "smartmail"
version = "0.1.0"
description = "Email indexing and semantic search with IMAP and Infinity embeddings"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "numpy>=1.24.3",
    "faiss-cpu>=1.7.4",
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "sentence-transformers",
    "transformers<4.49", #upper bound because of infinity, would be better to run infinity in a separate container
    "infinity-emb[all,server]>=0.0.76",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "scikit-learn>=1.3.0",
    "umap-learn>=0.5.0",
    "plotly>=5.17.0",
    "umap>=0.1.1",
]

[tool.uv]
dev-dependencies = []
